# lru-cache-adaptor

./: .gitignore  Cargo.toml  README.md
examples/: files_management.rs
src/: error.rs  lib.rs  utils.rs
